--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "data-fns": "^1.1.0",
     "date-fns": "^3.6.0",
     "install": "^0.13.0",
     "npm": "^10.8.1",
